@@ -64,7 +64,10 @@ struct time_point_to_python
     {
         using std::chrono::system_clock;
         using std::chrono::duration_cast;
-        time_t const tm = system_clock::to_time_t(pt);
+        // darwin doesn't have a converter for steady_clock to system_clock
+        // calculate the time manually by using lt::clock_type
+        time_t const tm = system_clock::to_time_t(system_clock::now()
+            + duration_cast<system_clock::duration>(pt - lt::clock_type::now()));
         std::tm* date = std::gmtime(&tm);
         object result = datetime_datetime(
             (int)1900 + date->tm_year
