@@ -41,15 +41,40 @@ using namespace sim;
 namespace lt = libtorrent;
 
 // this is a test for torrent_status time counters are correct
+// it is a long running test, we did already try to improve it:
+// - less slow peers vs many fast peers
+// - slow peers with smal torrent vs fast peers with large torrent
+// - less peers with large torrents vs more peers with smal torrent
+// - connection limit vs parallel requests
+// as conlusion the following combination take the least amount of
+// execution time per tick:
+// - many slow peers with small torrent and connection limit
 TORRENT_TEST(status_timers)
 {
-	lt::time_point start_time;
+	lt::time_point startseed_time;
+	lt::time_point last_active_time;
 	lt::torrent_handle handle;
 	bool ran_to_completion = false;
+	// at least 11s intervall because after resume it takes 11s untill we unchuck
+	// new pieces at this slow upload rate
+	int ticks_check_intervall = 20;
+	seconds active_time = seconds(0);
+	bool tick_is_in_active_range = false;
 
-	setup_swarm(1, swarm_test::upload
+	// TODO: this setup takes 1 minute execution time and could be improved by
+	// simulate more time per tick, currently we execute 71000 ticks
+	setup_swarm(10, swarm_test::upload_slow
 		// add session
-		, [](lt::settings_pack&) {}
+		, [](lt::settings_pack& pack) {
+			pack.set_int(lt::settings_pack::alert_mask, alert::status_notification
+				| alert::torrent_log_notification);
+			// slow as possible to do less compute per tick, but not too slow
+			// because simulator want to get done in 88 ticks per node
+			// 2KiB/s is very close to limit and could fail if the seed code get
+			// less efficient or if the simulator use more data by default
+			pack.set_int(settings_pack::upload_rate_limit, 2*1024);
+			pack.set_int(settings_pack::connections_limit, 2);
+		}
 		// add torrent
 		, [](lt::add_torrent_params&) {}
 		// on alert
@@ -57,47 +82,101 @@ TORRENT_TEST(status_timers)
 			if (auto ta = alert_cast<torrent_added_alert>(a))
 			{
 				TEST_CHECK(!handle.is_valid());
-				start_time = lt::clock_type::now();
+				lt::time_point start_time = lt::clock_type::now();
 				handle = ta->handle;
+				torrent_status st = handle.status();
+				// test last upload and download state before wo go throgh
+				// torrent states
+				TEST_CHECK(st.last_download == start_time);
+				TEST_CHECK(st.last_upload == start_time);
 			}
 		}
 		// terminate
 		, [&](int ticks, lt::session&) -> bool
 		{
-
-			// simulate 20 hours of uptime. Currently, the session_time and internal
-			// peer timestamps are 16 bits counting seconds, so they can only
-			// represent about 18 hours. The clock steps forward in 4 hour increments
-			// to stay within that range
-			if (ticks > 20 * 60 * 60)
-			{
-				ran_to_completion = true;
-				return true;
+			if(tick_is_in_active_range){
+				// 1 second per tick
+				active_time++;
 			}
 
-			// once an hour, verify that the timers seem correct
-			if ((ticks % 3600) == 0)
+			// resume on a tick which is far away from next tick check intervall
+			// because with very low upload limit it takes some time to unchock
+			switch(ticks)
 			{
-				lt::time_point const now = lt::clock_type::now();
-				auto const since_start = duration_cast<seconds>(now - start_time) - lt::seconds(1);
+				case 0:
+					// torrent get ready for seeding on first tick, means time +1s
+					startseed_time = lt::clock_type::now();
+					tick_is_in_active_range = true;
+					break;
+				case 21:
+					// pause on tick 21 after we did have the first upload tick
+					// this takes some ticks because of the speed limit
+					handle.pause();
+					tick_is_in_active_range = false;
+					last_active_time = lt::clock_type::now();
+					break;
+				case 64001:
+					// resum just before we hit the time shift handling
+					handle.resume();
+					tick_is_in_active_range = true;
+					break;
+				case 64061:
+					// pause after some some upload ticks
+					// not every tick is an upload because of the speed limit
+					handle.pause();
+					tick_is_in_active_range = false;
+					last_active_time = lt::clock_type::now();
+					break;
+				case 70001:
+					// resum after the time shift to figure out if an upload time
+					// does still work
+					handle.resume();
+					tick_is_in_active_range = true;
+					break;
+				case 70061:
+					// simulate at least 70061 seconds because peer timestamps are
+					// 16 bits counting seconds, so they can only represent about
+					// 18 hours
+					ran_to_completion = true;
+					return true;
+			}
+			// verify that the timers seem correct
+			if (tick_is_in_active_range && (ticks % ticks_check_intervall) == 0)
+			{
+				lt::time_point now = lt::clock_type::now();
 				torrent_status st = handle.status();
-				TEST_CHECK(st.active_duration == since_start);
-				TEST_CHECK(st.seeding_duration == since_start);
-				TEST_CHECK(st.finished_duration == since_start);
-				TEST_CHECK(st.last_upload < start_time);
+				TEST_CHECK(st.active_duration == active_time);
+				TEST_CHECK(st.seeding_duration == active_time);
+				TEST_CHECK(st.finished_duration == active_time);
+				/// does not download in seeding mode
+				TEST_CHECK(st.last_download == startseed_time);
+				// TODO: write a converter for TEST_EQUAL from duration to rep
+				// convert like this: return duration_cast<seconds>(arg1).count();
+				// test.hpp: error: no match for ‘operator<<’ operand types are
+				// std::basic_ostream<char> and std::chrono::duration<long int>
+				// then we can remove the printf statements
+				printf("active_time: %" PRId64 " \n", active_time.count());
+				printf("active_duration: %" PRId64 " \n", st.active_duration.count());
+				printf("seeding_duration: %" PRId64 " \n", st.seeding_duration.count());
+				printf("finished_duration: %" PRId64 " \n", st.finished_duration.count());
 
-				// checking the torrent counts as downloading
-				// eventually though, we've forgotten about it and go back to -1
-				if (since_start > lt::seconds(65000))
-				{
-					TEST_CHECK(st.last_download < start_time);
-				}
-				else
-				{
-					// TODO: this should really be a proximity-check
-					TEST_CHECK(st.last_download == start_time + lt::seconds(1));
-				}
+				// upload is running, last should be now
+				// we don't upload every tick because we have an upload limit
+				// at 2KiB/s limit there should be at least an update every 20 ticks
+				printf("seconds since last upload: %" PRId64 " \n", total_seconds(now - st.last_upload));
+				TEST_CHECK(total_seconds(now - st.last_upload) <= 20);
 			}
+
+			// check if upload time stay on last date during inactive
+			// check before and after 16bit overflow
+			if(ticks == 64200 || ticks == 67000 )
+			{
+				torrent_status st = handle.status();
+				// we don't upload every tick because we have an upload limit
+				// at this limit there should be at least an update every 20 ticks
+				TEST_CHECK(total_seconds(last_active_time - st.last_upload) <= 20);
+			}
+
 			return false;
 		});
 	TEST_CHECK(ran_to_completion);
